--- a/PersonlaFinance/Views/MutualFunds/Dashboard/Individual/_KanthInvestments.cshtml
+++ b/PersonlaFinance/Views/MutualFunds/Dashboard/Individual/_KanthInvestments.cshtml
@@ -30,14 +30,14 @@
                 <div class="">MTD</div>
                 <div class="value" data-select="MTD">0.00</div>
             </div>
-            <div class="col-md-3 investment-content gray-border text-center">
+            @*<div class="col-md-3 investment-content gray-border text-center">
                 <div class="">ULIP</div>
                 <div class="value" data-select="ULIP">0.00</div>
             </div>
             <div class="col-md-3 investment-content text-center">
                 <div class="">Stocks</div>
                 <div class="value" data-select="Stocks">$ 0.00</div>
-            </div>
+            </div>*@
         </div>
     </div>
 </div>
