--- a/PersonlaFinance/Views/MutualFunds/Dashboard/Individual/_Index.cshtml
+++ b/PersonlaFinance/Views/MutualFunds/Dashboard/Individual/_Index.cshtml
@@ -1,17 +1,17 @@
 ﻿<div class="col-md-12">
     <div class="row">
         <div class="col-md-12 investments">
-            @if (ViewBag.PortfolioId == 1)
+            @*@if (ViewBag.PortfolioId == 1)
             {
                 @RenderPage("~/Views/MutualFunds/Dashboard/Individual/_KanthInvestments.cshtml")
             }
             else
             {
                 @RenderPage("~/Views/MutualFunds/Dashboard/_Investments.cshtml")
-            }
-            <hr class="line-break"/>
+            }*@
+            @RenderPage("~/Views/MutualFunds/Dashboard/_Investments.cshtml")
+            <hr class="line-break" />
         </div>
-        
     </div>
     <div class="row">
         <div class="col-md-12">
