--- a/PersonlaFinance/Views/MutualFunds/Dashboard/_DashboardView.cshtml
+++ b/PersonlaFinance/Views/MutualFunds/Dashboard/_DashboardView.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-        <div class="col-md-12 investments">
+        <div class="col-md-12 investments border-bottom">
             @RenderPage("~/Views/MutualFunds/Dashboard/_Investments.cshtml")
         </div>
     </div>
