--- a/PersonlaFinance/Views/MutualFunds/Dashboard/_InvestmentsGraph.cshtml
+++ b/PersonlaFinance/Views/MutualFunds/Dashboard/_InvestmentsGraph.cshtml
@@ -1,7 +1,7 @@
 ﻿@*<div class="row">Invesetment Graph</div>*@
 
-<div class="col-md-12 invest-graph">
-    <hr class="line-break"/>
+<div class="col-md-12 invest-graph border-bottom">
+    @*<hr class="line-break"/>*@
     <div class="controls col-md-12">
         <div class="col-md-8"></div>
         <div class="col-md-4">
@@ -30,5 +30,5 @@
     <div class="row graph">
         <div class="chart" id="chartdiv"></div>
     </div>
-    <hr class="line-break"/>
+    @*<hr class="line-break"/>*@
 </div>
