--- a/PersonlaFinance/Views/Shared/_MFLayout.cshtml
+++ b/PersonlaFinance/Views/Shared/_MFLayout.cshtml
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/MutualFunds/css")
     @Scripts.Render("~/bundles/MutualFunds/Common")
+
+    <style>
+        .container-fluid {
+            padding-left: 0px !important;
+            padding-right: 0px !important;
+        }
+    </style>
 </head>
 <body>
     <header>
