--- a/PersonlaFinance/Views/MutualFunds/Dashboard/Index.cshtml
+++ b/PersonlaFinance/Views/MutualFunds/Dashboard/Index.cshtml
@@ -3,8 +3,8 @@
     Layout = "~/Views/Shared/_MFLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-12" data-container="view">
+<div class="">
+    <div class="col-md-12 dashboard-view" data-container="view">
         @RenderPage("~/Views/MutualFunds/Dashboard/_DashboardView.cshtml")
     </div>
 </div>
